--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo OK"
   },
   "hexo": {
     "version": ""
