--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo OK"
   },
   "hexo": {
-    "version": ""
+    "version": "7.1.1"
   },
   "dependencies": {
     "hexo": "^7.0.0",
